package com.jovisco.tutorial.patterns.factorymethods;

public class Circle implements Shape {
    @Override
    public void draw() {
        System.out.println("Drawing a circle ...");
    }
}
