package com.jovisco.tutorial.patterns.factorymethods;

public class Rectangle implements Shape {
    @Override
    public void draw() {
        System.out.println("Drawing a rectangle ...");
    }
}
