@startuml
skinparam nodesep 10
skinparam class {
  BackgroundColor<<interface>> #ffccff
  BackgroundColor<<abstract>> #ccccff
}

class ShapeFactory {
    {method} Shape getShape(String shapeType)
}
interface Shape {
    {method} draw()
}
class Circle implements Shape {
    {method} draw()
}
class Square implements Shape {
    {method} draw()
}
class Rectangle implements Shape {
    {method} draw()
}

ShapeFactory --> Circle
ShapeFactory --> Square
ShapeFactory --> Rectangle
@enduml